css/style.css
/** Fonts
--------------------------------------------- **/

@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);

/* Font size
--------------------------------------------- */

.regular-font {
	font-size: 16px;
}

.medium-font {
	font-size: 20px;
}

.large-font {
	font-size: 50px;
	font-weight: 100;
}

@media (min-width: 50rem) {
	.regular-font {
		font-size: 16px;	
	}

  	.medium-font {
		font-size: 24px;
	}

	.large-font {
		font-size: 60px;
		font-weight: 100;
	}	
}

@media (min-width: 70rem) {
  	.regular-font {
		font-size: 18px;
	}

  	.medium-font {
		font-size: 32px;
	}

	.large-font {
		font-size: 80px;
		font-weight: 700;
	}		
}

/** Main styles
--------------------------------------------- **/

* {
	margin: 0px;
	padding: 0px;
}

body, html {
  font: 100%/1.5 'Lato';
  font-weight: 400;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  color: #333333;
  background-color: #004786;
  overflow-x:hidden; 
}

a {
	cursor: pointer;
	text-decoration: none;
}

section {
	display: inline-block;
}

.container {
	width: 90%;
	margin: auto;
	position :relative;
	will-change: overflow; //new
	overflow: hidden; //new
}
.hidden {
	visibility: hidden;
}

/** Header
--------------------------------------------- **/

section.header {
	width: 100vw;
	min-width: 800px;
	height: 10vh;
	min-height: 80px;
	background-color: #004786;
	color: #FFFFFF;
}

section.header * {
	display: inline-block;
	float: left;
	margin: auto;
}

section.header p {
	line-height: 100%;
}

.logo {
	height: 10vh;
	min-height: 80px;
}


@media (min-width: 50rem) {
	section.header p {
		line-height: 100%;
	}	
}

@media (min-width: 70rem) {
 	section.header p {
		line-height: 100%;
	}	
}

/** Content
--------------------------------------------- **/

section.content {
	width: 100vw;
	min-width: 800px;
}

/** Left **/

.left {
	width: 30vw;
	min-width: 240px;
	height: 90vh;
	/*overflow: auto; //new*/
	min-height: 500px;
	float: left;
	background-color: #FFFFFF;
}

/** Search **/

.search {
	height: 50vh;
	min-height: 250px;
	background-color: #FFFFFF;
}

input {
	width: 95%;
	margin: 20px auto 0 auto;
	padding: 5px;
	border-radius: 4px;
	border-width: 1px;
	color: #333333;
}

button {
	display: block;
	margin: 20px auto 0 auto;
	padding: 5px 10px;
	border-radius: 4px;
	border-width: 1px;
	background-color: #004786;
	color: #FFFFFF;
}

/** Worklist **/

.worklist {
	height: 40vh;
	min-height: 250px;
}

.worklist .item {
	display: inline-block;
	width: 100%;
}

.worklist p {
	float: left;
}

.worklist div.icon {
	float: right;
}

/** Right **/

.right {
	width: 70vw;
	min-width: 560px;
	height: 90vh;
	/*height: auto;  //new */
	overflow: scroll; // new
	min-height: 500px;
	float: left;
	background-color: white;
}

table, th, td.table-header {
	/*border: 1px solid black;*/
}

td {
	padding-right: 	15px;
	padding-left: 	15px;	
	padding-top: 	10px;
	padding-bottom: 10px;
}
/*------------Header Table----------*/
tr.table-header, td.table-header{
	width: 100%;
}
td.table-header-credits {
/* 	text-align: center; */
/* 	padding-left: 43px; */
	
}
/*------------Results Table----------*/
.course-result{
	/*border: 1px solid black;*/
}

tr.course-result, td.course-result {

	width: 100%;
}
td.credits.course-result {
	text-align: center;
	padding-right: 35px;
	/*padding-left: 30px;*/
}

/*Entirely optional – just wanted to remove the scrollbar on WebKit browsers as I find them ugly*/
.left::-webkit-scrollbar,
.middle::-webkit-scrollbar,
.right::-webkit-scrollbar {
    display: none;
}

